--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,6 @@ Esercizio13_ReteNeurale/*.jou
 Esercizio13_ReteNeurale/*.log
 Esercizio13_ReteNeurale/.Xil
 Esercizio13_ReteNeurale/*.str
+Esercizio13_ReteNeurale/*.xpr
+
 
